Add CanvasingTabCallbackHandler for handling canvas callbacks
Introduced a new handler to process "canvas" callback data in Telegram bots. It includes pagination support, message formatting for savings details, and dynamic inline keyboard creation for navigation. This implementation enhances functionality for canvassing-related operations.